--- a/src/client/components/Nav.css
+++ b/src/client/components/Nav.css
@@ -126,4 +126,11 @@ nav li {
     align-items: center;
     display: flex;
   }
+
+}
+
+@media (max-width: 549px) {
+  nav .separator {
+    display: none;
+  }
 }
